fix contrast ratio for nav links

--- a/src/sass/_elements.scss
+++ b/src/sass/_elements.scss
@@ -373,11 +373,14 @@ html[dir="rtl"] .accordion {
 
 /* 5.4 Nav */
 
+
 .nav .nav-item .nav-link{color: #444;}
 .nav.nav-light .nav-item .nav-link{color: #ddd;}
 .nav:not(.nav-pills) .nav-item .nav-link.active, .nav:not(.nav-pills) .nav-item .nav-link:hover{color: $primary-color;}
+.portfolio-menu.nav:not(.nav-pills) .nav-item .nav-link.active, .nav:not(.nav-pills) .nav-item .nav-link:hover{color: #17804f;}
 
 
+.portfolio-menu.nav-pills .nav-link:not(.active):hover{color: #17804f;}
 .nav-pills .nav-link:not(.active):hover{color: $primary-color;}
 .nav-pills .nav-link.active,.nav-pills.nav-light .nav-link.active, .nav-pills .show > .nav-link{color:#fff;}
 
@@ -415,7 +418,7 @@ background-color: rgba(250,250,250,0.2);
     position: relative;
     border-radius: 0;
 	padding:0.6rem 1rem;
-    color: #7b8084;
+    color: #6e7276;
 	white-space: nowrap !important;
 	cursor: pointer;
     &.active {
@@ -464,7 +467,8 @@ background-color: rgba(250,250,250,0.2);
           left: auto;
         }
         background-color: transparent;
-        color: $primary-color;
+        // color: $primary-color;
+        color: #17804f;
       }
     }
   }
