--- a/src/sass/_helpers.scss
+++ b/src/sass/_helpers.scss
@@ -222,7 +222,7 @@
 
 /* Background Dark */
 .bg-dark {
-	background-color: #111418 !important;
+	background-color: #020507 !important;
 }
 
 .bg-dark-1 {
