--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -35,7 +35,7 @@ $body-font: 'Poppins', sans-serif;
 
 //---------- Base Colors ----------//
 
-$primary-color: 			$teal;
+$primary-color: 			$green;
 
 $primary-color-hover: 		darken($primary-color, 7%);
 $secondary-color: 			$secondary;
